Documentation terminée et labo terminé.

--- a/docker/image-auditor/Dockerfile
+++ b/docker/image-auditor/Dockerfile
@@ -2,6 +2,6 @@ FROM node:16
 
 COPY src/ /opt/app/
 
-CMD [ "node", "/opt/app/auditor.js" ]
+ENTRYPOINT [ "node", "/opt/app/auditor.js" ]
 
 EXPOSE 2205
